# shl-assessment-recommender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  APPROACH.md  Dockerfile  LICENSE  README.md  pyproject.toml  submission_checklist.md
data/evaluation/: evaluation_report.json  evaluation_summary.md
data/indexes/: embedding_manifest.json  embedding_report.json  index.faiss  metadata.json
data/processed/: catalog.json  catalog_manifest.json  catalog_report.json
deployment/: render.yaml
docs/: api.md  architecture.md  conversation_design.md  embedding_model_selection.md  retrieval_design.md
src/shl_agent/: __init__.py
src/shl_agent/api/: app.py
src/shl_agent/evaluation/: __init__.py  cli.py  metrics.py  models.py  replay.py  reports.py  trace_parser.py
src/shl_agent/models/: __init__.py  assessment.py  conversation.py  enums.py  recommendation.py  retrieval.py
src/shl_agent/prompts/: __init__.py
src/shl_agent/retrieval/: __init__.py  candidate_ranker.py  catalog_artifact.py  cli.py  embedding_service.py  engine.py  evidence_builder.py  faiss_index.py  index_artifacts.py  index_pipeline.py  interfaces.py  lexical_retriever.py  metadata_filter.py  query_expansion.py  rank_fusion.py  requirements.py  runtime_store.py  semantic_retriever.py  text_builder.py
src/shl_agent/scraper/: __init__.py  artifacts.py  cli.py  constants.py  fetcher.py  interfaces.py  official_catalog.py  parser.py  pipeline.py
tests/: __init__.py
tests/contract/: __init__.py  test_assignment_api_schema.py
tests/evaluation/: __init__.py  test_cli.py  test_metrics.py  test_replay.py  test_reports.py  test_trace_parser.py
tests/fixtures/: shl_assessment_detail.html
tests/integration/: test_api_routes.py  test_app_factory.py  test_catalog_pipeline.py  test_conversation_engine.py  test_embedding_index_pipeline.py  test_hybrid_retrieval_engine.py
tests/security/: __init__.py
tests/unit/: test_api_models.py  test_candidate_ranker.py  test_catalog_artifact.py  test_comparison_engine.py  test_conversation_history_resolver.py  test_domain_models.py  test_embedding_service.py  test_faiss_index.py  test_index_artifacts.py  test_intent_classifier.py  test_lexical_retriever.py  test_logging.py  test_metadata_filter.py  test_output_validator.py  test_query_expansion.py  test_rank_fusion.py  test_recommendation_readiness_policy.py  test_refinement_engine.py  test_requirement_resolver.py  test_retrieval_cli.py  test_retrieval_evidence_builder.py  test_scraper_artifacts.py  test_scraper_fetcher.py  test_scraper_parser.py  test_scraper_source_cli.py  test_semantic_retriever.py  test_sentence_transformer_backend.py  test_settings.py  test_text_builder.py
(+9 files in other folders)
