[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "shl-assessment-agent"
version = "0.1.0"
description = "Stateless conversational agent for SHL Individual Test Solutions"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "SHL AI Intern Candidate" }]
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "faiss-cpu>=1.9.0,<2",
    "fastapi>=0.115.0,<1",
    "httpx>=0.28.0,<1",
    "numpy>=2.1.0,<3",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.7.0,<3",
    "sentence-transformers>=5.0.0,<6",
    "tenacity>=9.0.0,<10",
    "uvicorn[standard]>=0.34.0,<1",
]

[project.scripts]
shl-build-catalog = "shl_agent.scraper.cli:main"
shl-build-index = "shl_agent.retrieval.cli:main"
shl-evaluate = "shl_agent.evaluation.cli:main"

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0,<2"]
openrouter = ["openai>=1.60.0,<2"]
scraping-browser = ["playwright>=1.49.0,<2"]
dev = [
    "httpx>=0.28.0,<1",
    "mypy>=1.14.0,<2",
    "pre-commit>=4.0.0,<5",
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.25.0,<1",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.9.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shl_agent"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=shl_agent --cov-report=term-missing --cov-fail-under=90"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
minversion = "8.3"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["*/interfaces.py"]
source = ["shl_agent"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "F",
    "FAST",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "ANN401",
    "PLR2004",
    "S104",
    "TRY003",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["shl_agent"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["faiss.*", "sentence_transformers.*"]
ignore_missing_imports = true
